2006-09-25 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/x11/XGGeneric.h: Extra fielkd to flag when style offsets
	are known.
	* Source/x11/XGServerEvent.m: Add a lot more debug logging for
	reparenting.  Ignore and log changes to 'known' style offsets.
	* Source/x11/XGServerWindow.m: On startup we now check to see if
	style offsets have been recorded in the root window, and if not
	we briefly create a test window of each style to determine style
	offsets, so we know what the offsets are for each style before
	anything attempts to use them.

2006-09-24 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/x11/XGServerEvent.m: Use #if to disable old window exposure
	mechanism in favour of sending exposure events to the front end.
	Hopefully this will fix a bug where the old bypassing of the gui
	event queue could cause an attempt to copy from a region outside
	the image buffer.
	If there are no problems with this, we should remove the old, complex
	mechanism.

2006-09-13 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/x11/XGServerWindow.m: use generic.wintypes.win_modal_atom
	for popup menu in gnome/ewmh window manager so that popup menus work
	in modal windows.  Reported as bug 17713 by Yen-Ju Chen.

2006-09-12 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/art/ARTContext.m:
	* Source/art/path.m:
	* Source/art/composite.m:
	* Source/art/shfill.m:
	* Source/art/image.m:
	* Source/xlib/XGGState.m:
	* Source/x11/XGServerWindow.m:
	* Source/x11/XGServerEvent.m:
	Get backend to generate NSEvent objects with event location given in
	OpenStep coordinates. Fix flushwindowrect coordinate handling.
	Update art backend to try to honor the x and y window offsets
	provided in the graphics state.

2006-09-09 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/x11/XGServerWindow.m: ([_XFrameToOSFrame:for:]) fix transform
	error.

2006-09-08 Adam Fedor <fedor@gnu.org>

	Tools/gpbs.1: Add documentation on options (from Dennis Leeuw).

2006-09-06 Richard Frith-Macdonald <rfm@gnu.org>