@@ -1,3 +1,9 @@
+2006-09-26 Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/x11/XGServerWindow.m: Add more debug for checking style
+	offsets. Wait for up to a second for visibility events in case
+	XSync() does not work to ensure we receive them.
+
 2006-09-25 Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Headers/x11/XGGeneric.h: Extra fielkd to flag when style offsets
